// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render empty Url 1`] = `
<div>
  No data available for 
</div>
`;

exports[`Should render full Url 1`] = `
Array [
  <div>
    No data available for 
    https://www.fabrique.social.gouv.fr
  </div>,
  " ",
]
`;

exports[`Should render full Url with screenshot 1`] = `
Array [
  <div>
    <div
      className="jumbotron"
      style={
        Object {
          "display": "flex",
          "height": 100,
          "marginBottom": 10,
          "marginTop": 10,
          "paddingTop": 20,
        }
      }
    >
      <div
        style={
          Object {
            "flex": "1 0 auto",
          }
        }
      >
        <h4>
          <a
            href="https://www.fabrique.social.gouv.fr"
            rel="noreferrer noopener"
            target="_blank"
          >
            https://www.fabrique.social.gouv.fr
          </a>
        </h4>
        <p />
      </div>
      <div
        style={
          Object {
            "flex": "0 0 100px",
            "marginTop": -10,
          }
        }
      >
        <a
          href="https://www.fabrique.social.gouv.fr"
          rel="noreferrer noopener"
          target="_blank"
        >
          <img
            alt="Copie d'écran de https://www.fabrique.social.gouv.fr"
            src="/report/aHR0cHM6Ly93d3cuZmFicmlxdWUuc29jaWFsLmdvdXYuZnI=/screenshot.jpeg"
            style={
              Object {
                "border": "1px solid var(--dark)",
                "maxHeight": 80,
                "position": "relative",
                "top": 0,
              }
            }
          />
        </a>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Tools config Should render Url with limited tools 1`] = `
Array [
  <div>
    No data available for 
  </div>,
  " ",
]
`;
